# scene_prototype

./: README.md  _editable_build_backend.py  pyproject.toml  setup.py
data/: Journal 1 (kopia).m4a:com.dropbox.attrs  Journal 2 (kopia).m4a:com.dropbox.attrs  Journal 3 (kopia).m4a:com.dropbox.attrs  public_ambulans_stockholm_assets_files_Behandlingsriktlinjer_KOMBINERAD FIL_2026-02-23_med länkar och destinationer.pdf:com.dropbox.attrs
data/journaler/: Journal 1.txt  Journal 2.txt  Journal 3 (ljudfil finns!).txt  Journal 4.txt  Journal 5 (ljudfil finns!).txt
data/ljudfiler/: Journal 1 (kopia).m4a  Journal 2.m4a  Journal 3.m4a  Journal 4 (kopia).m4a  Journal 5.m4a
docs/: ambulance_edge_deployment.md
outputs/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json
src/ambulance_case_backend/: __init__.py  cli.py  config.py  data_access.py  edge_api.py  local_backend.py  local_llm_backend.py  models.py  openai_client.py  pdf_utils.py  pipeline.py  prompting.py
src/ambulance_case_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ambulance_case_backend/frontend/: index.html  main.js
tests/: test_config_and_cli.py  test_data_access.py  test_edge_api.py  test_local_llm_backend.py  test_models.py  test_pipeline.py
