[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "_editable_build_backend"
backend-path = ["."]

[project]
name = "ambulance-case-backend"
version = "0.1.0"
description = "Backend pipeline for ambulance audio transcription, treatment support, and journal drafting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.6.0",
  "pypdf>=4.2.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
local_asr = [
  "transformers>=4.41.0",
  "torch>=2.2.0",
  "pyannote.audio>=3.1.0",
]
edge = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
ambulance-case = "ambulance_case_backend.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
ambulance_case_backend = ["frontend/*.html", "frontend/*.js"]
